--- a/notebooks/lick_analysis.ipynb
+++ b/notebooks/lick_analysis.ipynb
@@ -18,7 +18,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84a94201144b4be1847177b5490f1ecb",
+       "model_id": "df411672ab834e9188b7104cbfa30583",
        "version_major": 2,
        "version_minor": 0
       },
@@ -42,13 +42,12 @@
     }
    ],
    "source": [
-    "from collections import Counter\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from pntools import sampled\n",
+    "import beyelerlab as ab\n",
     "\n",
     "%matplotlib widget\n",
     "\n",
@@ -63,58 +62,11 @@
     "detrend_lambda = 2e5\n",
     "f_bandpass = (0.2, 6)\n",
     "\n",
-    "class Bout:\n",
-    "    def __init__(self, timestamps, th=10):\n",
-    "        self._timestamps = np.asarray(timestamps)\n",
-    "        self.th = th\n",
-    "\n",
-    "    def __call__(self):\n",
-    "        return list(self._timestamps)\n",
-    "    \n",
-    "    def __len__(self):\n",
-    "        return len(self._timestamps)\n",
-    "\n",
-    "    def bout_classes(self):\n",
-    "        timestamps = self._timestamps\n",
-    "        bout_list = np.zeros(timestamps.size, dtype=int)\n",
-    "        bout_list[0] = 1\n",
-    "        curr_bout = 1\n",
-    "        for sample_count, (prev_stamp, this_stamp) in enumerate(zip(timestamps[:-1], timestamps[1:])):\n",
-    "            if this_stamp - prev_stamp > self.th:\n",
-    "                curr_bout += 1\n",
-    "            bout_list[sample_count+1] = curr_bout\n",
-    "        return bout_list\n",
-    "    \n",
-    "    def bout_start_idx(self):\n",
-    "        return [0] + list(np.where(np.diff(self.bout_classes()) == 1)[0] + 1)\n",
-    "    \n",
-    "    def bout_end_idx(self):\n",
-    "        return list(np.where(np.diff(self.bout_classes()) == 1)[0]) + [len(self)-1]\n",
-    "\n",
-    "    def bout_start(self):\n",
-    "        return self._timestamps[self.bout_start_idx()]\n",
-    "    \n",
-    "    def bout_end(self):\n",
-    "        return self._timestamps[self.bout_end_idx()]\n",
-    "    \n",
-    "    def bout_dur(self):\n",
-    "        return self.bout_end() - self.bout_start()\n",
-    "    \n",
-    "    def bout_gap_dur(self):\n",
-    "        return self.bout_start()[1:] - self.bout_end()[:-1]\n",
-    "    \n",
-    "    def n_bouts(self):\n",
-    "        return len(set(self.bout_classes()))\n",
-    "    \n",
-    "    def n_events_per_bout(self):\n",
-    "        return list(Counter(self.bout_classes()).values())\n",
-    "    \n",
-    "\n",
     "df = pd.read_csv(lick_file).to_numpy()\n",
     "t = df[:, 0]\n",
     "m_licktimes = dict()\n",
     "for mouse_count, mouse_name in enumerate(mouse_names):\n",
-    "    m_licktimes[mouse_name] = Bout(t[df[:, mouse_col_offset+mouse_count].astype(bool)], bout_th)\n",
+    "    m_licktimes[mouse_name] = ab.Bout(t[df[:, mouse_col_offset+mouse_count].astype(bool)], bout_th)\n",
     "\n",
     "f, ax = plt.subplots(1, 1)\n",
     "ax.eventplot([x() for x in m_licktimes.values()], linelengths=0.8)\n",
@@ -124,13 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c621c8a669cc4d3c8b851146c69ebf80",
+       "model_id": "39860ea5f4214d80b5469f65869e63c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -163,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,23 +133,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1fcf9e805e0>]"
+       "[<matplotlib.lines.Line2D at 0x2aef68d50a0>]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50de24c48c4c4a17997837f2d6004fa4",
+       "model_id": "b1dd8e5a9dee4121ab709c54d9d46e75",
        "version_major": 2,
        "version_minor": 0
       },
@@ -228,23 +180,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1fc804b0d00>]"
+       "[<matplotlib.lines.Line2D at 0x2ae80485d00>]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4fc5f2633ecb4e749bec16a8c1d85757",
+       "model_id": "bde63b9c20b848da8fd93d042871e7b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -275,13 +227,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d768dd1c78a4b9aadb4f39395203a94",
+       "model_id": "c7344bc6ba2a4b85be973929accf361c",
        "version_major": 2,
        "version_minor": 0
       },
