--- a/notebooks/lick_analysis.ipynb
+++ b/notebooks/lick_analysis.ipynb
@@ -272,14 +272,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
-    "df = pd.DataFrame(mu, index=event_signals.t, columns=[mouse_id])\n",
-    "df.to_csv(os.path.join(fdir, f'{mouse_id}_zscore.csv'))"
+    "\n",
+    "mu_z = np.mean(event_signals_z, axis=1)\n",
+    "mu_dff = np.mean(event_signals_dff, axis=1)\n",
+    "df = pd.DataFrame(np.asarray([mu_z, mu_dff]).T, index=event_signals.t, columns=['z_score', 'dff'])\n",
+    "df.to_csv(os.path.join(fdir, f'{mouse_id}_zscore_dff.csv'))"
    ]
   }
  ],
