saving group average

--- a/notebooks/lick_analysis.ipynb
+++ b/notebooks/lick_analysis.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd750c1dedb244d1a6f6ae9ab8e44c19",
+       "model_id": "6621a4c43d284f01ae0ac24426de86b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -32,10 +32,12 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import dill\n",
+    "import os\n",
     "from pathlib import Path\n",
+    "import dill\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "import pntools as pn\n",
     "from pntools import sampled\n",
@@ -338,9 +340,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import os\n",
-    "\n",
     "mu_z = np.mean(event_signals_z, axis=1)\n",
     "mu_dff = np.mean(event_signals_dff, axis=1)\n",
     "df = pd.DataFrame(np.asarray([mu_z, mu_dff]).T, index=event_signals.t, columns=['z_score', 'dff'])\n",
@@ -349,23 +348,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "Text(0.5, 0, 'Time (s)')"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff7d2eabf3d141bc8fc25ba74818d59f",
+       "model_id": "5c184457661041eeae2ef682cddb3015",
        "version_major": 2,
        "version_minor": 0
       },
@@ -408,7 +397,10 @@
     "ax.fill_between(t_vec, mu-sem, mu+sem, alpha=0.3) # standard error of the mean\n",
     "ax.set_title('Group average')\n",
     "ax.set_ylabel('z-score')\n",
-    "ax.set_xlabel('Time (s)')"
+    "ax.set_xlabel('Time (s)')\n",
+    "\n",
+    "df = pd.DataFrame(np.asarray([mu, sem]).T, index=t_vec, columns=['group_average_mean', 'group_average_sem'])\n",
+    "df.to_csv(os.path.join(group_dir, f'group_average.csv'))"
    ]
   }
  ],
