--- a/notebooks/lick_analysis.ipynb
+++ b/notebooks/lick_analysis.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4951e68329f1426c8256c5e0bf7a286a",
+       "model_id": "b00b0cf3cae74b578a949ae3f1d9a018",
        "version_major": 2,
        "version_minor": 0
       },
@@ -89,13 +89,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14adab723b814c9e97bd4dcf302436fe",
+       "model_id": "a219b0977de14eb38f1c14c6a7bfad09",
        "version_major": 2,
        "version_minor": 0
       },
@@ -131,7 +131,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# number of bouts\n",
+    "d.lick_times[mouse_id].n_bouts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -140,14 +161,14 @@
        "Text(0.5, 1.0, 'Step 4: bandpass')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7de877175e924edc97f0e3622a8fad5d",
+       "model_id": "4226361432f3477490ed77bf686c7c2b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -197,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -206,14 +227,14 @@
        "Text(0.5, 0, 'Time (s)')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e5a15d650204166bb7d5f6c751f9c32",
+       "model_id": "4ea7527ba7144cdeb4c7a691c0784c17",
        "version_major": 2,
        "version_minor": 0
       },
@@ -273,23 +294,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "Text(0.5, 0.98, 'Mouse32G')"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf18fd887ccd44ccb365dd5e8dddb7b2",
+       "model_id": "4a9423201d6e4404a622f011ee1247f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -320,7 +331,10 @@
     "ax[1].plot(event_signals.t, event_signals_z[:, -1])\n",
     "ax[1].set_title('Last lick bout')\n",
     "ax[1].set_xlabel('Time (s)')\n",
-    "f.suptitle(mouse_id)\n"
+    "f.suptitle(mouse_id)\n",
+    "\n",
+    "df = pd.DataFrame(np.asarray([event_signals_z[:, 0], event_signals_z[:, -1]]).T, index=event_signals.t, columns=['z_score_first_bout', 'z_score_last_bout'])\n",
+    "df.to_csv(os.path.join(fdir, f'{mouse_id}_zscore_firstlast.csv'))"
    ]
   },
   {
